[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["Gregory Wildes"]
license = "MIT OR Apache-2.0"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
postgres = { version = "0.19", features = ["with-serde_json-1"] }

