[package]
name = "xtask_plot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
chrono = "0.4"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde_json = "1.0"

[patch.crates-io]
# home 0.5.12 requires rustc 1.88 (edition 2024). Pin to a rustc-1.87-compatible version.
home = "=0.5.11"
